@@ -103,10 +103,15 @@ L<WWW::Gazetteer::HeavensAbove>.
 
 =head1 COPYRIGHT
 
-Copyright (C) 2002-5, Leon Brocard
+Copyright (C) 2002-9, Leon Brocard
 
 This module is free software; you can redistribute it or modify it
 under the same terms as Perl itself.
+
+=head1 LICENSE
+
+This module is free software; you can redistribute it or
+modify it under the same terms as Perl itself.
 
 =head1 AUTHOR
 
