@@ -67,8 +67,12 @@ SEE ALSO
     WWW::Gazetteer::HeavensAbove.
 
 COPYRIGHT
-    Copyright (C) 2002-5, Leon Brocard
+    Copyright (C) 2002-9, Leon Brocard
 
+    This module is free software; you can redistribute it or modify it under
+    the same terms as Perl itself.
+
+LICENSE
     This module is free software; you can redistribute it or modify it under
     the same terms as Perl itself.
 
