@@ -3,6 +3,7 @@ Revision history for Perl module WWW::Gazetteer:
 0.24
    - perltidy
    - add computer-readable license
+   - add human-readable license
 
 0.23 Sat Jan 29 11:14:51 CET 2005
 	- reworked to use Module::Pluggable
